# zedi

./: .coderabbit.yaml  .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaksignore  .prettierignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  DOCUMENTATION.ja.md  DOCUMENTATION.md  Dockerfile.dev  LICENSE  README.ja.md  README.md  SECURITY.ja.md  SECURITY.md  SPECIFICATION_POLICY.md  docker-compose.dev.yml  eslint.config.js  index.html  install.cmd  knip.json  package-lock.json  package.json  playwright.config.ts  pr-142-review-response-comment.md  stryker.config.mjs  stryker.config.mutation-changed.mjs  stryker.config.nightly.mjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.coverage.shared.ts
.agents/: README.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.husky/: pre-commit
admin/: .env.example  README.ja.md  README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
db/: schema.sql
docs/: PRD.md  branch-protection-setup.md  dependabot-prs-merge-plan.md  lint-and-format.md  markdown-wysiwyg-investigation.md  onboarding-wizard-ux-proposal.md  pr-160-review-response.md  pr-178-review-response-plan.md  pr-184-review-response.md  pr-186-review-response.md  pr-191-investigation-cloudflare-railway.md  pr-191-review-response.md  pr-192-review-response.md  pr-211-review-analysis.md  pr-212-review-response.md  pr94-review-response.md  production-setup-procedure.md  test-implementation-plan.md
e2e/: ai-chat-panel.spec.ts  auth-mock.ts  linked-pages.spec.ts  page-editor.spec.ts  pdf-knowledge.spec.ts  search.spec.ts  web-clipper.spec.ts  wiki-compose-instant.spec.ts  wiki-compose.spec.ts  wiki-link-ghost-completion.spec.ts  wikilink-create-dialog.spec.ts
extension/: README.ja.md  README.md  background.js  config.js  config.worker.js  constants.js  manifest.base.json  popup.html  popup.js
journal/: README.md  review-feature-test-mutation-roadmap-logic-395-20250322-2.md  review-local-changes-develop-20250322-1.md  today.md
playwright-report/: index.html
public/: site.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  claude_sidecar.rs  database.rs  lib.rs  link_detector.rs  main.rs  models.rs  pdf_sources.rs  search.rs  workspace_paths.rs
(+2535 files in other folders)
