[package]
name = "zedi"
version = "0.19.0"
description = "Zero-Friction Knowledge Network"
authors = ["Zedi Team"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "~2.5"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
# SHA-256 over local PDF bytes (issue otomatty/zedi#389).
# ローカル PDF のバイト列ハッシュに使う（otomatty/zedi#389）。
sha2 = "0.10"

[profile.dev]
incremental = true

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
